# squiggle-analysis

./: README.md  pyproject.toml
src/squiggle_analysis/: __init__.py  attribution.py  cli.py  compare_runs.py  run.py  trajectories.py
src/squiggle_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/squiggle_analysis/events/: __init__.py  change_point.py
src/squiggle_analysis/geometry/: compute_state.py
src/squiggle_analysis/io/: example_manifest.json  write_probe_parquet_per_experiment.py
src/squiggle_analysis/llm_analysis/: __init__.py  analyzer.py  prompts.py  schemas.py  section_analyzer.py
src/squiggle_analysis/metrics/: __init__.py  event_diversity.py
src/squiggle_analysis/reporting/: event_diagnostics.py  report_md.py
tests/: test_smoke.py
